--- a/Main.xaml
+++ b/Main.xaml
@@ -5,7 +5,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1230,1364.5</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1255,1364.5</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -264,15 +264,9 @@
                     </sap:WorkflowViewStateService.ViewState>
                     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Check if the job application email has a valid resume attachment." DisplayName="CheckForValidResume.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="200,121" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_10" UnSafe="False" WorkflowFileName="CheckForValidResume.xaml">
                       <ui:InvokeWorkflowFile.Arguments>
-                        <InArgument x:TypeArguments="scg:List(snm:MailMessage)" x:Key="in_mmlist_MailMessage">
-                          <VisualBasicValue x:TypeArguments="scg:List(snm:MailMessage)" ExpressionText="mmlist_MailMessage" />
-                        </InArgument>
-                        <OutArgument x:TypeArguments="upr:ILocalResource" x:Key="out_ilr_FileReference">
-                          <VisualBasicReference x:TypeArguments="upr:ILocalResource" ExpressionText="ilr_FileReference" />
-                        </OutArgument>
-                        <OutArgument x:TypeArguments="x:Boolean" x:Key="out_bool_validResume">
-                          <VisualBasicReference x:TypeArguments="x:Boolean" ExpressionText="bool_validResume" />
-                        </OutArgument>
+                        <InArgument x:TypeArguments="scg:List(snm:MailMessage)" x:Key="in_mmlist_MailMessage">[mmlist_MailMessage]</InArgument>
+                        <OutArgument x:TypeArguments="upr:ILocalResource" x:Key="out_ilr_FileReference">[ilr_FileReference]</OutArgument>
+                        <OutArgument x:TypeArguments="x:Boolean" x:Key="out_bool_validResume">[bool_validResume]</OutArgument>
                       </ui:InvokeWorkflowFile.Arguments>
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -388,11 +382,17 @@
                                         <av:PointCollection x:Key="ConnectorLocation">578.5,795.5 1120,795.5 1120,90 1090,90</av:PointCollection>
                                       </scg:Dictionary>
                                     </sap:WorkflowViewStateService.ViewState>
-                                    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Reply to applicant with an unknown applied position to resubmit their application to clearly state a valid position from the job postings &amp; move the email to the Invalid folder in Outlook" DisplayName="HandleApplicationForResubmission.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="200,211" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="HandleApplicationForResubmission.xaml">
+                                    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Reply to applicant with an unknown applied position to resubmit their application to clearly state a valid position from the job postings &amp; move the email to the Invalid folder in Outlook" DisplayName="HandleApplicationForResubmission.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="334,200" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="HandleApplicationForResubmission.xaml">
                                       <ui:InvokeWorkflowFile.Arguments>
-                                        <InArgument x:TypeArguments="x:String" x:Key="in_str_ResubmissionInstruction">Ensure that you clearly state a valid position in our job postings.</InArgument>
-                                        <InArgument x:TypeArguments="scg:List(snm:MailMessage)" x:Key="in_mmlist_MailMessage">[mmlist_MailMessage]</InArgument>
-                                        <InArgument x:TypeArguments="x:String" x:Key="in_str_SelectedEmailAccount">[str_SelectedEmailAccount]</InArgument>
+                                        <InArgument x:TypeArguments="x:String" x:Key="in_str_ResubmissionInstruction">
+                                          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="&quot;Ensure that you clearly state a valid position (&quot; + str_JobPositions + &quot;) in our job postings.&quot;" />
+                                        </InArgument>
+                                        <InArgument x:TypeArguments="scg:List(snm:MailMessage)" x:Key="in_mmlist_MailMessage">
+                                          <VisualBasicValue x:TypeArguments="scg:List(snm:MailMessage)" ExpressionText="mmlist_MailMessage" />
+                                        </InArgument>
+                                        <InArgument x:TypeArguments="x:String" x:Key="in_str_SelectedEmailAccount">
+                                          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="str_SelectedEmailAccount" />
+                                        </InArgument>
                                       </ui:InvokeWorkflowFile.Arguments>
                                       <sap:WorkflowViewStateService.ViewState>
                                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
