--- a/Main.xaml
+++ b/Main.xaml
@@ -5,72 +5,32 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1255,1364.5</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1230,1364.5</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
-      <x:String>System.Activities</x:String>
-      <x:String>System.Activities.Statements</x:String>
+      <x:String>GlobalConstantsNamespace</x:String>
+      <x:String>GlobalVariablesNamespace</x:String>
       <x:String>Microsoft.VisualBasic</x:String>
       <x:String>System</x:String>
+      <x:String>System.Activities</x:String>
+      <x:String>System.Activities.Statements</x:String>
       <x:String>System.Collections</x:String>
       <x:String>System.Collections.Generic</x:String>
       <x:String>System.Collections.ObjectModel</x:String>
+      <x:String>System.ComponentModel</x:String>
       <x:String>System.Data</x:String>
       <x:String>System.Linq</x:String>
       <x:String>System.Net.Mail</x:String>
-      <x:String>UiPath.Core.Activities</x:String>
-      <x:String>System.Reflection</x:String>
-      <x:String>UiPath.Mail</x:String>
-      <x:String>UiPath.Mail.Outlook.Activities</x:String>
-      <x:String>UiPath.Shared.Activities</x:String>
-      <x:String>UiPath.Mail.Activities</x:String>
       <x:String>System.Runtime.Serialization</x:String>
-      <x:String>UiPath.Excel</x:String>
-      <x:String>System.ComponentModel</x:String>
       <x:String>System.Xml.Serialization</x:String>
-      <x:String>UiPath.Excel.Activities</x:String>
-      <x:String>UiPath.DataTableUtilities</x:String>
-      <x:String>Microsoft.Office.Interop.Outlook</x:String>
-      <x:String>UiPath.Activities.System.Collections</x:String>
-      <x:String>System.Activities.Runtime.Collections</x:String>
-      <x:String>UiPath.Platform.ResourceHandling</x:String>
-      <x:String>UiPath.IntelligentOCR.StudioWeb.Activities.DocumentClassification</x:String>
-      <x:String>UiPath.DocumentProcessing.Contracts.Dom</x:String>
-      <x:String>UiPath.DocumentProcessing.Contracts.Classification</x:String>
-      <x:String>UiPath.IntelligentOCR.StudioWeb.Activities</x:String>
-      <x:String>UiPath.DocumentProcessing.Contracts</x:String>
-      <x:String>UiPath.DocumentUnderstanding.ML.Activities</x:String>
-      <x:String>UiPath.IntegrationService.Activities.Runtime.Models</x:String>
-      <x:String>UiPath.IntegrationService.Activities.Runtime.Activities</x:String>
-      <x:String>UiPath.Platform.Activities</x:String>
-      <x:String>UiPath.DocumentProcessing.Contracts.DataExtraction</x:String>
-      <x:String>UiPath.DocumentProcessing.Contracts.Results</x:String>
-      <x:String>UiPath.IntelligentOCR.StudioWeb.Activities.DataExtraction</x:String>
-      <x:String>UiPath.IntelligentOCR.StudioWeb.Activities.SWEntities.CustomGptDocumentType178Dd0B3D42547D8965DB437B28Eb709.Bundle</x:String>
-      <x:String>UiPath.IntelligentOCR.StudioWeb.Activities.PDF.ExtractPDFText</x:String>
-      <x:String>UiPath.IntelligentOCR.StudioWeb.Activities.PDF</x:String>
-      <x:String>System.Management.Automation</x:String>
-      <x:String>System.Dynamic</x:String>
-      <x:String>System.Security</x:String>
-      <x:String>UiPath.Web</x:String>
-      <x:String>UiPath.Web.Activities</x:String>
-      <x:String>Newtonsoft.Json.Linq</x:String>
-      <x:String>Newtonsoft.Json</x:String>
-      <x:String>System.Collections.Specialized</x:String>
-      <x:String>UiPath.Shared.Activities.Business</x:String>
-      <x:String>System.IO</x:String>
       <x:String>UiPath.Core</x:String>
-      <x:String>UiPath.UIAutomationNext.Enums</x:String>
-      <x:String>UiPath.UIAutomationCore.Contracts</x:String>
-      <x:String>UiPath.UIAutomationNext.Models.ExtractData</x:String>
-      <x:String>UiPath.UIAutomationNext.Activities</x:String>
-      <x:String>UiPath.Platform.ObjectLibrary</x:String>
-      <x:String>GlobalVariablesNamespace</x:String>
-      <x:String>GlobalConstantsNamespace</x:String>
-      <x:String>UiPath.Core.Activities.TextModifications</x:String>
-      <x:String>UiPath.Activities.System.Workflow.Business</x:String>
-      <x:String>System.Text.RegularExpressions</x:String>
+      <x:String>UiPath.Core.Activities</x:String>
+      <x:String>UiPath.Mail</x:String>
+      <x:String>UiPath.Mail.Activities</x:String>
+      <x:String>UiPath.Mail.Outlook.Activities</x:String>
+      <x:String>UiPath.Platform.ResourceHandling</x:String>
+      <x:String>UiPath.Shared.Activities</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -384,15 +344,9 @@
                                     </sap:WorkflowViewStateService.ViewState>
                                     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Reply to applicant with an unknown applied position to resubmit their application to clearly state a valid position from the job postings &amp; move the email to the Invalid folder in Outlook" DisplayName="HandleApplicationForResubmission.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="334,200" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="HandleApplicationForResubmission.xaml">
                                       <ui:InvokeWorkflowFile.Arguments>
-                                        <InArgument x:TypeArguments="x:String" x:Key="in_str_ResubmissionInstruction">
-                                          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="&quot;Ensure that you clearly state a valid position (&quot; + str_JobPositions + &quot;) in our job postings.&quot;" />
-                                        </InArgument>
-                                        <InArgument x:TypeArguments="scg:List(snm:MailMessage)" x:Key="in_mmlist_MailMessage">
-                                          <VisualBasicValue x:TypeArguments="scg:List(snm:MailMessage)" ExpressionText="mmlist_MailMessage" />
-                                        </InArgument>
-                                        <InArgument x:TypeArguments="x:String" x:Key="in_str_SelectedEmailAccount">
-                                          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="str_SelectedEmailAccount" />
-                                        </InArgument>
+                                        <InArgument x:TypeArguments="x:String" x:Key="in_str_ResubmissionInstruction">["Ensure that you clearly state a valid position (" + str_JobPositions + ") in our job postings."]</InArgument>
+                                        <InArgument x:TypeArguments="scg:List(snm:MailMessage)" x:Key="in_mmlist_MailMessage">[mmlist_MailMessage]</InArgument>
+                                        <InArgument x:TypeArguments="x:String" x:Key="in_str_SelectedEmailAccount">[str_SelectedEmailAccount]</InArgument>
                                       </ui:InvokeWorkflowFile.Arguments>
                                       <sap:WorkflowViewStateService.ViewState>
                                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
